styles.css
/* ... */
.faded-text {
  user-select: none;
  font-size: 7em;
  color: var(--fadedText);
  z-index: -0;
  bottom: -16%;
  left: -5%;
  font-weight: bold;
  transition: all 3s, color 0.3s;
}
.hero-section-left {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 2rem;
  transition: transform 0.2s linear;
}

.hero-section-heading {
  font-size: 35px;
  color: var(--textDescription);
  font-weight: 500;
}
.herosection-sub-heading {
  font-size: 45px;
  line-height: 45px;
}
.name{
  color: #4e45d5;
  font-weight: 800;
}
.role {
  color: #4e45d5;
  font-weight: 800;
}
.hero-section-description {
  margin-top: 1rem;
  color: var(--textDescription);
  width: 70%;
  font-weight: 500;

}
.btn-pink {
  background-color: var(--bgOrange);
  width: fit-content;
  color: white;
  padding: 0.8rem 2.3rem;
  box-shadow: 5px 5px 7px 0px var(--btnShadow);
  font-size: 18px;
  cursor: pointer;
  transition: all 0.5s;
  font-weight: 500;
  border: solid 3px transparent;
  position: relative;
  z-index: 1;
}
.btn-pink::before {
  content: "";
  position: absolute;
  background-color: #ffffff;
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0px;
  z-index: -1;
  transform: scaleX(0);
  transform-origin: left;
  transition: all 0.8s;
}
.btn-pink:hover::before {
  transform: scaleX(1);
}
.btn-pink:hover {
  border: solid 3px var(--bgOrange);
  color: black;
}
#btn-bottom {
  display: none;
}
/* Hero Left Section End */
/* Hero Right Section Start */
.hero-section-right {
  position: relative;
}
.absolute {
  position: absolute;
}
.user-image {
  padding: 2.5rem;
  filter: grayscale(1);
  transition: all 1s;
  animation: scaleImage 5s linear infinite;
}
.user-image img {
  object-fit: cover;
  z-index: -9;
}
@keyframes scaleImage {
  0% {
    filter: grayscale(1);
    scale: 0.9;
  }
  50% {
    filter: grayscale(0);
    scale: 1;
    box-shadow: 3px 3px 10px var(--textDescription);
  }
  100% {
    filter: grayscale(1);
    scale: 0.9;
  }
}

.icon-dots {
  z-index: 9;
  bottom: -1rem;
  right: 0;
  animation-name: dotsAnimation;
  animation-duration: 5s;
  animation-iteration-count: infinite;
}
@keyframes dotsAnimation {
  0% {
    transform: translateY(0px);
  }
  50% {
    transform: translateY(-15px);
  }
  100% {
    transform: translateY(0px);
  }
}

.icon-cube {
  top: -0.8em;
  right: 1em;
  animation-name: cubeRotate;
  animation-duration: 3s;
  animation-iteration-count: infinite;
}
@keyframes cubeRotate {
  0% {
    transform: rotateY(0deg) translateY(0px);
  }
  50% {
    transform: rotateY(180deg) translateY(-12px);
  }
  100% {
    transform: rotateY(360deg) translateY(0px);
  }
}

.icon-circle {
  bottom: 0;
  left: 0;
  animation: shakeEffect 6s linear infinite;
}
@keyframes shakeEffect {
  50% {
    bottom: 10%;
    left: 5%;
  }
}

.icon-zigzak {
  z-index: 10;
  top: 1.5em;
  left: -0.3em;
  animation: zigzakAnimation 5s ease-in infinite;
}
@keyframes zigzakAnimation {
  50% {
    top: 2%;
    left: 5%;
  }
}

.icon-plus {
  top: -0.8rem;
  left: 50%;
  animation: shakeEffectPlus 5s ease-in infinite;
}
@keyframes shakeEffectPlus {
  50% {
    top: 3%;
    left: 48%;
  }
}
/* Hero Right Section End */
@media (max-width:1300px) {
  .hero-section {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding-top: -1rem;
    padding-bottom: 3rem;
  }
  .hero-section-description {
    text-align: center;
    margin: auto;
  }
  .faded-text {
    display: none;
  }
  #btn-top {
    display: none;
  }
  #btn-bottom {
    margin-top: -7rem;
    display: block;
  }
  .hero-section-right {
    margin-top: -6em;
    scale: 0.7;
  }
  .logo-group{
    margin-left: 100px;
  }
}
/* Hero section end */

/* Project Section Start */
.projects {
  margin-top: 4rem;
  background-color: var(--fadedText);
}
.project-container {
  max-width: 1200px;
  margin: 0 auto;
  padding: 3rem 0;
}
.page-header {
  padding-top: 30px;
  color: var(--bgOrange);
  text-align: center;
  font-size: 90px;
}

.project-container {
  display: flex;
  flex-direction: column;
  gap: 120px;
}

.project-card {
  width: 90%;
  height: 550px;
  background-image: url(.images/projects/Project01.png);
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  box-shadow: 0px 0px 40px var(--projectShadow);
}
.project-card::after {
  content: "";
  color: var(--bgPrimary);
  background: var(--cardShadow);
  z-index: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  transform: scaleX(1);
}
.project-card::before {
  content: "";
  color: var(--bgPrimary);
  position: absolute;
  background: linear-gradient(45deg, #343d68, #343d68be, #343d687c);
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  transform: scaleX(0);
  transform-origin: left;
  transition: all 0.4s;
}
.project-card:hover::before {
  transform: scaleX(1);
}
.project-content {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  color: white;
  padding: 2em;
  bottom: 20%;
  position: absolute;
  z-index: 5;
  transition: all 0.4s;
}
.project-content-left {
  left: 10%;
}
.project-content-right {
  right: -20%;
}
.project-card:hover .project-content {
  scale: 1.1;
}
.project-heading {
  font-size: 50px;
  font-weight: bold;
  line-height: 3rem;
}
.project-sub-heading {
  font-size: 16px;
  width: 70%;
  font-style: italic;
}

.btn-project {
  border: none;
  font-weight: 500;
}
.btn-project:hover {
  border: none;
}
.btn-group {
  display: flex;
  gap: 0.9rem;
  align-items: center;
}
.icon {
  cursor: pointer;
  font-size: 35px;
  transition: all 0.4s;
  color: var(--bgPrimary);
}
.icon:hover {
  color: var(--bgOrange);
}
.project-number {
  position: absolute;
  font-size: 200px;
  font-weight: 600;
  color: rgb(255, 255, 255);
  display: none;
  z-index: 10;
  transition-delay: 1s;
  transition: transform 2s;
}
.project-number-left {
  right: -40px;
  top: -45px;
}
.project-number-right {
  left: -40px;
  top: -45px;
}
/* ... */

